registry-creds: Set --skip-kube-system=false' by default
The fact that this addon skips kube-system is not documented anywhere and is kind of confusing.  This should help new users get started.

--- a/deploy/addons/registry-creds/registry-creds-rc.yaml.tmpl
+++ b/deploy/addons/registry-creds/registry-creds-rc.yaml.tmpl
@@ -21,6 +21,8 @@ spec:
       - image: {{.CustomRegistries.RegistryCreds  | default .ImageRepository | default .Registries.RegistryCreds }}{{.Images.RegistryCreds}}
         name: registry-creds
         imagePullPolicy: IfNotPresent
+        args:
+          - --skip-kube-system=false'
         env:
           - name: AWS_ACCESS_KEY_ID
             valueFrom:
